ncc/testsuite/positive/closures.n
class A
{
  static apply (f : void -> void) : void { f () }

  public static Main () : void {
    def f2 (allow_ref) {
      when (allow_ref)
        apply (fun () { f2 (! allow_ref) })
    }
    f2 (true);


    def x = if (true) [ ([["foo"]], "foo") ] else [];

    assert (x is [ ([["foo"]], "foo") ]);
  }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
