ncc/testsuite/negative/cyclic-type2.n
module M {
Main () : void { // E: cyclic type found
def foo (l,f) { 
  l.Map (fun (_) { foo([l],!f) })
}

_ = foo([],true)
}}
